# snipebundle

./: .gitignore  Cargo.toml  HANDOFF_LAUNCH_BUNDLER.md  LICENSE  NOTICE  RAYDIUM_LAUNCH_SPEC.md  README.md  USER_GUIDE.md  config.example.toml  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  state.rs
apps/desktop/src/components/: AppNav.tsx  BundleGroupsManager.tsx  ExportKeysModal.tsx  FanOutPanel.tsx  MintChart.tsx  MultiLaunchPanel.tsx  MultiRaydiumLaunchPanel.tsx  PrimaryWalletPicker.tsx  PumpfunChart.tsx  RaydiumLaunchPanel.tsx  SendPanel.tsx  SniperSettings.tsx  TokenIcon.tsx  WalletGrid.tsx  WalletManager.tsx  WalletPanel.tsx  WalletPicker.tsx
apps/desktop/src/lib/: active-wallet.ts  ipc.ts  pumpportal-stream.ts
apps/desktop/src/pages/: Chart.tsx  Dashboard.tsx  Funding.tsx  Launch.tsx  ModeSelect.tsx  Trade.tsx  Trenches.tsx  Trending.tsx  Unlock.tsx  Volume.tsx  WalletSetup.tsx  Wallets.tsx  Welcome.tsx
apps/web/: next.config.js  package.json  tailwind.config.ts  vercel.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/demo/: page.tsx
apps/web/app/download/: page.tsx
apps/web/app/live/: page.tsx
crates/core/: Cargo.toml
crates/core/src/: amounts.rs  balance.rs  bundler.rs  config.rs  engine.rs  exit.rs  filters.rs  funding.rs  keystore.rs  launch.rs  lib.rs  listener.rs  price_watcher.rs  raydium_launch.rs  trending.rs  types.rs  volume.rs  wallet.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs  ui.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
tools/: gen_icons.py
