[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tui",
]
# gui/src-tauri excluded from default workspace check until icons + frontend exist;
# `cargo tauri build` from gui/ will pick it up via path.
exclude = ["apps/desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/r4vager/snipebundle"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
solana-sdk = "2.0"
solana-client = "2.0"
bs58 = "0.5"
rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
directories = "5"
clap = { version = "4", features = ["derive"] }
bincode = "1.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
