[package]
name = "snipebundle-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
bs58.workspace = true
rand.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
zeroize.workspace = true
directories.workspace = true
