[package]
name = "snipebundle-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "snipebundle"
path = "src/main.rs"

[dependencies]
snipebundle-core = { path = "../core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
rpassword = "7"
