[package]
name = "snipebundle-gui"
version.workspace = true
edition.workspace = true
description = "snipebundle desktop app"

[lib]
name = "snipebundle_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
snipebundle-core = { path = "../../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
