[package]
name = "snipebundle-gui"
version = "0.1.9"
edition = "2021"
license = "Apache-2.0"
description = "snipebundle desktop app"

[lib]
name = "snipebundle_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
snipebundle-core = { path = "../../../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
